<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@id/mainView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="center_horizontal"
                android:text="@string/welcome" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@id/buttonSingleCard"
                        android:layout_width="145.0dip"
                        android:layout_height="wrap_content"
                        android:onClick="doSingleCard"
                        android:text="@string/singlecard" />

                    <Button
                        android:id="@id/timespread"
                        android:layout_width="145.0dip"
                        android:layout_height="wrap_content"
                        android:onClick="doTimeSpread"
                        android:text="@string/timespread" />

                    <Button
                        android:id="@id/buttonCircleSpread"
                        android:layout_width="145.0dip"
                        android:layout_height="wrap_content"
                        android:onClick="doCircleSpread"
                        android:text="@string/circlespread" />

                    <Button
                        android:id="@id/cardgrid"
                        android:layout_width="145.0dip"
                        android:layout_height="wrap_content"
                        android:onClick="doCardGrid"
                        android:text="@string/cardgrid" />

                    <Button
                        android:id="@id/gallery"
                        android:layout_width="145.0dip"
                        android:layout_height="wrap_content"
                        android:onClick="doGallery"
                        android:text="@string/gallery" />
                    />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@id/mainCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="top"
                        android:onClick="doChangeCard"
                        android:src="@drawable/card00"
                        tools:longClickable="true" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/docs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="center_horizontal"
                android:text="@string/docs" />
        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation_main" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@id/card"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:longClickable="true"
            android:onClick="doPreviousLayout" />
    </LinearLayout>

</LinearLayout>